# agenda-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md
examples/: basic.rs
examples/.github/workflows/: ci.yml
src/: agenda.rs  error.rs  job.rs  lib.rs
